src/objects/Sign__c.object
<CustomObject>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Signs</relationshipLabel>
        <relationshipName>Signs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Listing__r.Address__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plywood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Sign</label>
    <nameField>
        <displayFormat>Sign-{0000000}</displayFormat>
        <label>Sign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>